--- a/styles/app.css
+++ b/styles/app.css
@@ -731,6 +731,78 @@
   }
 }
 
+.section-4a .product-cards {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  height: 80vh;
+}
+
+@media (max-width: 1024px) {
+  .section-4a .product-cards {
+    height: 60vh;
+  }
+}
+
+.section-4a .product-cards .col-2 {
+  -webkit-box-flex: 66.666%;
+      -ms-flex: 66.666% 0 0px;
+          flex: 66.666% 0 0;
+}
+
+.section-4a .product-cards .col-1 {
+  -webkit-box-flex: 33.333%;
+      -ms-flex: 33.333% 0 0px;
+          flex: 33.333% 0 0;
+}
+
+.section-4a .product-cards .col-1.d-flex-col {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+}
+
+.section-4a .product-cards .product {
+  position: relative;
+  width: 100%;
+  height: auto;
+}
+
+.section-4a .product-cards .product-cartridge, .section-4a .product-cards .product-prerolls, .section-4a .product-cards .product-edibles {
+  padding-top: 56.25%;
+}
+
+.section-4a .product-cards .product img {
+  position: absolute;
+  top: 0;
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+.section-4a .product-cards .product-title {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  font-size: 3rem;
+  font-weight: 600;
+  color: #fff;
+  margin: 0;
+}
+
+@media (max-width: 1024px) {
+  .section-4a .product-cards .product-title {
+    font-size: 2rem;
+  }
+}
+
 .section-5 {
   padding: 80px 0;
   border-bottom: 1px solid #d9d9d9;
