--- a/styles/app.scss
+++ b/styles/app.scss
@@ -571,6 +571,65 @@
     }
 }
 
+//===== Section-4a =========================================================================
+.section-4a {
+    .product-cards {
+        display: flex;
+        width: 100%;
+        height: 80vh;
+
+        @media (max-width: 1024px) {
+            height: 60vh;
+        }
+
+        .col-2 {
+            flex: 66.666% 0 0;
+        }
+
+        .col-1 {
+            flex: 33.333% 0 0;
+
+            &.d-flex-col {
+                display: flex;
+                flex-flow: column;
+            }
+        }
+
+        .product {
+            position: relative;
+            width: 100%;
+            height: auto;
+
+            &-cartridge, &-prerolls, &-edibles {
+                padding-top: 56.25%;
+            }
+
+            img {
+                position: absolute;
+                top: 0;
+                display: block;
+                width: 100%;
+                height: 100%;
+            }
+
+            &-title {
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                font-size: 3rem;
+                font-weight: 600;
+                color: $white-color;
+                margin: 0;
+
+                @media (max-width: 1024px) {
+                    font-size: 2rem;
+                }
+            } 
+        }
+    }
+}
+
 //===== Section-5 =========================================================================
 .section-5 {
     padding: 80px 0;
