--- a/styles/app.scss
+++ b/styles/app.scss
@@ -622,6 +622,68 @@
     }
 }
 
+.notification {
+    position: fixed;
+    z-index: 999;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+
+    .card {
+        display: flex;
+        flex-flow: row;
+        justify-content: flex-start;
+        padding: 10px;
+        background: #fff;
+        box-shadow: 0 0 10px 2px #eaeaea;
+        border-radius: 10px;
+        width: 500px;
+        position: relative;
+
+        &-image {
+            display: flex;
+            align-content: center;
+            flex: 100px 0 0;
+            height: 100px;
+            border: 1px solid #dddddd6b;
+            border-radius: 20px;
+            margin-right: 20px;
+            padding: 15px;
+        }
+
+        &-content {
+            display: flex;
+            flex:1 1;
+            flex-flow: column;
+            justify-content: space-between;
+
+            h3 {
+                font-size: 21px;
+                font-weight: bold;
+            }
+
+            p {
+                font-size: 18px;
+                margin-bottom: 10px;
+                color: #636363;
+            }
+
+            a {
+                color: #636363;
+                font-size: 14px;
+                text-decoration: underline;
+            }
+        }
+
+        &-close-link {
+            position: absolute;
+            top: 10px;
+            right: 15px;
+            font-size: 24px;
+        }
+    }
+}
+
 //===== Section-5 =========================================================================
 .section-5 {
     padding: 80px 0;
