--- a/styles/app.scss
+++ b/styles/app.scss
@@ -637,41 +637,54 @@
         background: #fff;
         box-shadow: 0 0 10px 2px #eaeaea;
         border-radius: 10px;
-        width: 500px;
+        width: 1024px;
         position: relative;
 
         &-image {
-            display: flex;
-            align-content: center;
-            flex: 100px 0 0;
+            position: relative;
+            width: 100px;
             height: 100px;
             border: 1px solid #dddddd6b;
             border-radius: 20px;
-            margin-right: 20px;
-            padding: 15px;
+            padding-top: 10%;
+            
+            img {
+                position: absolute;
+                top: 0;
+                left: 0;
+                display: block;
+                width: 100%;
+                height: 100%;
+            }
         }
-
+        
         &-content {
             display: flex;
             flex:1 1;
             flex-flow: column;
-            justify-content: space-between;
+            justify-content: flex-start;
+            margin-left: 20px;
 
             h3 {
-                font-size: 21px;
+                font-size: 22px;
                 font-weight: bold;
+                width: calc(100% - 25px);
+                word-break: break-word;
             }
 
             p {
                 font-size: 18px;
                 margin-bottom: 10px;
                 color: #636363;
+                word-break: break-word;
             }
 
             a {
                 color: #636363;
-                font-size: 14px;
+                font-size: 16px;
                 text-decoration: underline;
+                word-break: break-word;
+                margin-top: auto;
             }
         }
 
@@ -680,6 +693,68 @@
             top: 10px;
             right: 15px;
             font-size: 24px;
+            font-weight: 500;
+        }
+
+        @media (max-width: 1240px) {
+            width: 768px;
+        }
+
+        @media (max-width: 1024px) {
+            width: 520px;
+        }
+
+        @media (max-width: 768px) {
+            width: 480px;
+        }
+
+        @media (max-width: 520px) {
+            width: 420px;
+        }
+
+        @media (max-width: 480px) {
+            width: 360px;
+
+            &-image {
+                width: 80px;
+                height: 80px;
+            }
+
+            &-content {
+                margin-left: 10px;
+
+                h3 {
+                    font-size: 16px;
+                    width: calc(100% - 20px);
+                }
+                p {
+                    font-size: 14px;
+                }
+                a {
+                    font-size: 12px;
+                }
+            }
+
+            &-close-link {
+                top: 5px;
+                right: 10px;
+            }
+        }
+
+        @media (max-width: 380px) {
+            width: 280px;
+
+            &-content {
+                h3 {
+                    font-size: 14px;
+                }
+                p {
+                    font-size: 12px;
+                }
+                a {
+                    font-size: 11px;
+                }
+            }
         }
     }
 }
