--- a/styles/app.css
+++ b/styles/app.css
@@ -50,7 +50,8 @@
   display: none;
 }
 
-.nav-main .navbar .navbrand .hamburger-menu-btn svg g, .nav-main .navbar .navbrand .hamburger-menu-btn svg path {
+.nav-main .navbar .navbrand .hamburger-menu-btn svg g,
+.nav-main .navbar .navbrand .hamburger-menu-btn svg path {
   fill: #000;
 }
 
@@ -233,7 +234,10 @@
   vertical-align: sub;
 }
 
-.nav-main .navbar .menu .menu-item.menu-btn a:hover .icon-cart g, .nav-main .navbar .menu .menu-item.menu-btn a:hover .icon-cart path, .nav-main .navbar .menu .menu-item.menu-btn a:focus .icon-cart g, .nav-main .navbar .menu .menu-item.menu-btn a:focus .icon-cart path, .nav-main .navbar .menu .menu-item.menu-btn a:active .icon-cart g, .nav-main .navbar .menu .menu-item.menu-btn a:active .icon-cart path {
+.nav-main .navbar .menu .menu-item.menu-btn a:hover .icon-cart g,
+.nav-main .navbar .menu .menu-item.menu-btn a:hover .icon-cart path, .nav-main .navbar .menu .menu-item.menu-btn a:focus .icon-cart g,
+.nav-main .navbar .menu .menu-item.menu-btn a:focus .icon-cart path, .nav-main .navbar .menu .menu-item.menu-btn a:active .icon-cart g,
+.nav-main .navbar .menu .menu-item.menu-btn a:active .icon-cart path {
   fill: #192943;
 }
 
@@ -1387,5 +1391,217 @@
 
 .footer .sub-footer .copyright-text {
   margin: 0;
+}
+
+.store-card {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-line-pack: start;
+      align-content: flex-start;
+  height: auto;
+  margin: 25px;
+  padding: 0px;
+  border: 1px solid #ddd;
+  border-radius: 25px;
+}
+
+.store-card .card-image {
+  position: relative;
+  width: 70%;
+  height: auto;
+  padding-top: 47%;
+  border-radius: 25px;
+  overflow: hidden;
+}
+
+.store-card .card-image img {
+  position: absolute;
+  width: 100%;
+  height: auto;
+  display: block;
+  top: 0;
+  left: 0;
+}
+
+.store-card .card-image .card-tag {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: #38c1cf;
+  padding: 10px 15px;
+  border-radius: 15px;
+  max-width: 50%;
+}
+
+.store-card .card-image .card-tag span {
+  font-size: 24px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  color: #fff;
+  text-transform: uppercase;
+  word-break: break-word;
+}
+
+.store-card .card-content {
+  padding: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 30%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-line-pack: start;
+      align-content: flex-start;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+.store-card .card-content .card-title {
+  font-size: 36px;
+  font-weight: 600;
+  margin-bottom: 15px;
+  word-break: break-word;
+}
+
+.store-card .card-content .card-category {
+  font-size: 24px;
+  color: #636f77;
+  word-break: break-word;
+}
+
+.store-card .card-content .dot-divider {
+  content: '';
+  display: inline-block;
+  width: 8px;
+  height: 8px;
+  background: #636f77;
+  border-radius: 50%;
+  vertical-align: middle;
+  margin: 0px 8px;
+}
+
+.store-card .card-content .card-detail {
+  font-size: 24px;
+  color: #a6aeb3;
+  word-break: break-word;
+}
+
+.store-card .card-content .card-detail .card-price-symbol {
+  font-weight: 500;
+}
+
+.store-card .card-content .card-detail .card-price-value {
+  position: relative;
+}
+
+.store-card .card-content .card-detail .card-time {
+  position: relative;
+}
+
+.store-card .card-content .card-detail .card-time-icon {
+  position: relative;
+}
+
+.store-card .card-content .card-detail .card-time-count {
+  position: relative;
+}
+
+.store-card .card-content .card-detail .card-time-unit {
+  position: relative;
+}
+
+@media (max-width: 1240px) {
+  .store-card .card-image {
+    padding-top: 47%;
+  }
+}
+
+@media (max-width: 1024px) {
+  .store-card {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin: 20px;
+  }
+  .store-card .card-image {
+    width: 100%;
+    padding-top: 67%;
+  }
+  .store-card .card-content {
+    width: 100%;
+  }
+}
+
+@media (max-width: 768px) {
+  .store-card .card-image {
+    width: 100%;
+  }
+  .store-card .card-content {
+    width: 100%;
+  }
+}
+
+@media (max-width: 480px) {
+  .store-card {
+    margin: 15px;
+  }
+  .store-card .card-image .card-tag {
+    padding: 5px 10px;
+  }
+  .store-card .card-image .card-tag span {
+    font-size: 16px;
+  }
+  .store-card .card-content {
+    padding: 15px;
+  }
+  .store-card .card-content .card-title {
+    font-size: 24px;
+  }
+  .store-card .card-content .card-category {
+    font-size: 18px;
+  }
+  .store-card .card-content .card-detail {
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 380px) {
+  .store-card .card-content .card-title {
+    font-size: 22px;
+  }
+  .store-card .card-content .card-category {
+    font-size: 16px;
+  }
+  .store-card .card-content .card-detail {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 320px) {
+  .store-card .card-image .card-tag {
+    padding: 5px 10px;
+  }
+  .store-card .card-image .card-tag span {
+    font-size: 12px;
+  }
+  .store-card .card-content .card-title {
+    font-size: 20px;
+  }
+  .store-card .card-content .card-category {
+    font-size: 14px;
+  }
+  .store-card .card-content .card-detail {
+    font-size: 14px;
+  }
 }
 /*# sourceMappingURL=app.css.map */
