--- a/styles/app.css
+++ b/styles/app.css
@@ -820,8 +820,10 @@
   -webkit-box-shadow: 0 0 10px 2px #eaeaea;
           box-shadow: 0 0 10px 2px #eaeaea;
   border-radius: 10px;
-  width: 1024px;
   position: relative;
+  width: 100%;
+  margin: 0 auto;
+  max-width: 520px;
 }
 
 .notification .card-image {
@@ -840,6 +842,8 @@
   display: block;
   width: 100%;
   height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .notification .card-content {
@@ -889,68 +893,41 @@
   font-weight: 500;
 }
 
-@media (max-width: 1240px) {
-  .notification .card {
-    width: 768px;
-  }
+.notification .card-image {
+  width: 80px;
+  height: 80px;
 }
 
-@media (max-width: 1024px) {
-  .notification .card {
-    width: 520px;
-  }
+.notification .card-content {
+  margin-left: 10px;
 }
 
-@media (max-width: 768px) {
-  .notification .card {
-    width: 480px;
-  }
+.notification .card-content h3 {
+  font-size: 16px;
+  width: calc(100% - 20px);
 }
 
-@media (max-width: 520px) {
-  .notification .card {
-    width: 420px;
-  }
+.notification .card-content p {
+  font-size: 14px;
 }
 
-@media (max-width: 480px) {
-  .notification .card {
-    width: 360px;
-  }
-  .notification .card-image {
-    width: 80px;
-    height: 80px;
-  }
-  .notification .card-content {
-    margin-left: 10px;
-  }
-  .notification .card-content h3 {
-    font-size: 16px;
-    width: calc(100% - 20px);
-  }
-  .notification .card-content p {
-    font-size: 14px;
-  }
-  .notification .card-content a {
-    font-size: 12px;
-  }
-  .notification .card-close-link {
-    top: 5px;
-    right: 10px;
-  }
+.notification .card-content a {
+  font-size: 12px;
+}
+
+.notification .card-close-link {
+  top: 5px;
+  right: 10px;
 }
 
 @media (max-width: 380px) {
-  .notification .card {
-    width: 280px;
-  }
-  .notification .card-content h3 {
+  .notification-content h3 {
     font-size: 14px;
   }
-  .notification .card-content p {
+  .notification-content p {
     font-size: 12px;
   }
-  .notification .card-content a {
+  .notification-content a {
     font-size: 11px;
   }
 }
@@ -1478,7 +1455,7 @@
   word-break: break-word;
 }
 
-.store-card .card-content .dot-divider {
+.store-card .card-content .dot-divider::before {
   content: '';
   display: inline-block;
   width: 8px;
