--- a/styles/app.scss
+++ b/styles/app.scss
@@ -647,8 +647,10 @@
         background: #fff;
         box-shadow: 0 0 10px 2px #eaeaea;
         border-radius: 10px;
-        width: 1024px;
         position: relative;
+        width: 100%;
+        margin: 0 auto;
+        max-width: 520px;
 
         &-image {
             position: relative;
@@ -665,6 +667,7 @@
                 display: block;
                 width: 100%;
                 height: 100%;
+                object-fit: cover;
             }
         }
 
@@ -706,68 +709,47 @@
             font-weight: 500;
         }
 
-        @media (max-width: 1240px) {
-            width: 768px;
+        &-image {
+            width: 80px;
+            height: 80px;
         }
 
-        @media (max-width: 1024px) {
-            width: 520px;
-        }
+        &-content {
+            margin-left: 10px;
 
-        @media (max-width: 768px) {
-            width: 480px;
-        }
-
-        @media (max-width: 520px) {
-            width: 420px;
-        }
-
-        @media (max-width: 480px) {
-            width: 360px;
-
-            &-image {
-                width: 80px;
-                height: 80px;
+            h3 {
+                font-size: 16px;
+                width: calc(100% - 20px);
             }
 
-            &-content {
-                margin-left: 10px;
-
-                h3 {
-                    font-size: 16px;
-                    width: calc(100% - 20px);
-                }
-
-                p {
-                    font-size: 14px;
-                }
-
-                a {
-                    font-size: 12px;
-                }
+            p {
+                font-size: 14px;
             }
 
-            &-close-link {
-                top: 5px;
-                right: 10px;
+            a {
+                font-size: 12px;
             }
         }
 
-        @media (max-width: 380px) {
-            width: 280px;
+        &-close-link {
+            top: 5px;
+            right: 10px;
+        }
+    }
 
-            &-content {
-                h3 {
-                    font-size: 14px;
-                }
+    @media (max-width: 380px) {
 
-                p {
-                    font-size: 12px;
-                }
+        &-content {
+            h3 {
+                font-size: 14px;
+            }
 
-                a {
-                    font-size: 11px;
-                }
+            p {
+                font-size: 12px;
+            }
+
+            a {
+                font-size: 11px;
             }
         }
     }
@@ -1158,7 +1140,7 @@
             word-break: break-word;
         }
 
-        .dot-divider {
+        .dot-divider::before {
             content: '';
             display: inline-block;
             width: 8px;
@@ -1249,9 +1231,11 @@
             .card-title {
                 font-size: 24px;
             }
+
             .card-category {
                 font-size: 18px;
             }
+
             .card-detail {
                 font-size: 18px;
             }
@@ -1263,9 +1247,11 @@
             .card-title {
                 font-size: 22px;
             }
+
             .card-category {
                 font-size: 16px;
             }
+
             .card-detail {
                 font-size: 16px;
             }
@@ -1276,7 +1262,7 @@
         .card-image {
             .card-tag {
                 padding: 5px 10px;
-                
+
                 span {
                     font-size: 12px;
                 }
@@ -1287,9 +1273,11 @@
             .card-title {
                 font-size: 20px;
             }
+
             .card-category {
                 font-size: 14px;
             }
+
             .card-detail {
                 font-size: 14px;
             }
